--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,22 @@
     <string name="app_name">Sunshine</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_map">Map Location</string>
+    <string name="action_share">Share</string>
+
+    <!-- pref for update weather info-->
     <string name="action_refresh">Refresh</string>
-    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_detail">Details</string>
     <string name="title_activity_settings">Settings</string>
+
+    <!-- pref for location -->
     <string name="pref_location_key" translatable="false">location</string>
     <string name="pref_location_label">Location</string>
-    <string name="pref_location_Default" translatable="false">94043</string>
-    <string name="pref_units_label">Metrics</string>
+    <string name="pref_location_default" translatable="false">94043</string>
+
+    <!-- pref for temp units -->
+
+    <string name="pref_units_label">Temperature Units</string>
     <string name="pref_units_key" translatable="false">units</string>
     <string name="pref_units_metric">Metric</string>
     <string name="pref_units_imperial">Imperial</string>
