--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,62 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!--
+         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
+         It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
+         or something similar.
+    -->
     <string name="app_name">Sunshine</string>
-    <string name="hello_world">Hello world!</string>
+
+    <!--
+         By convention, "action" denotes that this String will be used as the label for an Action,
+         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
+    -->
     <string name="action_settings">Settings</string>
     <string name="action_map">Map Location</string>
     <string name="action_share">Share</string>
+    <!-- Menu label to fetch updated weather info from the server -->
+    <string name="action_refresh" translatable="false">Refresh</string>
 
-    <!-- pref for update weather info-->
-    <string name="action_refresh">Refresh</string>
     <string name="title_activity_detail">Details</string>
     <string name="title_activity_settings">Settings</string>
 
-    <!-- pref for location -->
-    <string name="pref_location_key" translatable="false">location</string>
+    <!-- Label for the location preference [CHAR LIMIT=30] -->
     <string name="pref_location_label">Location</string>
+
+    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_location_key" translatable="false">location</string>
+
+    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
     <string name="pref_location_default" translatable="false">94043</string>
 
-    <!-- pref for temp units -->
+    <!-- Strings related to Notification preference -->
+    <string name="pref_last_sync">last_sync</string>
 
+    <!-- Strings for formatting weather-related data -->
+
+    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
     <string name="pref_units_label">Temperature Units</string>
+
+    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
+    <string name="pref_units_label_metric">Metric</string>
+
+    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
+    <string name="pref_units_label_imperial">Imperial</string>
+
+    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
     <string name="pref_units_key" translatable="false">units</string>
-    <string name="pref_units_metric">Metric</string>
-    <string name="pref_units_imperial">Imperial</string>
-    <string-array name="pref_units_values">
-        <item>@string/pref_units_metric</item>
-        <item>@string/pref_units_imperial</item>
-    </string-array>
-    <string-array name="pref_units_options">
-        <item>@string/pref_units_metric</item>
-        <item>@string/pref_units_imperial</item></string-array>
 
-        <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
-        <string name="today">Today</string>
+    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
+    <string name="pref_units_metric" translatable="false">metric</string>
 
-        <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
-        <string name="tomorrow">Tomorrow</string>
+    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
+    <string name="pref_units_imperial" translatable="false">imperial</string>
 
-        <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
-<string name="format_full_friendly_date">
-    <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
-</string>
+    <!-- Notification Format -->
+    <string name="format_notification">
+        Forecast for today: %1$s with a high of %2$s and low of %3$s.
+    </string>
 
+    <!-- Language-specific constants -->
+    <string name="today">Today</string>
+
+    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
+    <string name="tomorrow">Tomorrow</string>
+
+    <!-- Date format [CHAR LIMIT=NONE] -->
+    <string name="format_full_friendly_date">
+        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
+    </string>
+
+    <!-- Strings for formatting weather-related data -->
+    <!-- Temperature format [CHAR LIMIT=5 -->
     <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
-    <!-- Windspeed format in mph [CHAR LIMIT=NONE] -->
-    <string name="format_wind_mph">Wind: <xliff:g id="wind_speed">
-        %1.0f</xliff:g> mph <xliff:g id="wind_dir">%2$s</xliff:g></string>
 
-    <!-- Windspeed format in km/h [CHAR LIMIT=NONE] -->
-    <string name="format_wind_kmh">Wind: <xliff:g id="wind_speed">
-        %1.0f</xliff:g> km/h <xliff:g id="wind_dir">%2$s</xliff:g></string>
+    <!-- Windspeed formats -->
+    <!-- Wind in mph [CHAR LIMIT=25] -->
+    <string name="format_wind_mph">
+        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
+    </string>
+    <!-- Wind in kph [CHAR LIMIT=25] -->
+    <string name="format_wind_kmh">
+        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
+    </string>
 
-    <!-- Pressure format in hPa [CHAR LIMIT=NONE] -->
+    <!-- Pressure format CHAR LIMIT=25] -->
     <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
 
-    <!-- Humidity format in % [CHAR LIMIT=NONE] -->
+    <!-- Humidity format CHAR LIMIT=25]-->
     <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
 
-
-
+    <!-- Share format [CHAR LIMIT=NONE]-->
+    <string name="format_share">
+        Weather for <xliff:g id="date">%1$s</xliff:g> in <xliff:g id="location">%2$s</xliff:g>:
+        A high of <xliff:g id="high">%3$s</xliff:g> and low of
+        <xliff:g id="low">%4$s</xliff:g></string>
+    <!-- SyncAdapter related -->
+    <string name="sync_account_type">example.com</string>
+    <string name="sync_authority">"com.example.android.sunshine.app"</string>
 </resources>
