--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,14 @@
     <!-- Strings related to Notification preference -->
     <string name="pref_last_sync">last_sync</string>
 
+    <!-- Strings related to Notification Enabled preference -->
+    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
+    <string name="pref_enable_notifications_label">Weather Notifications</string>
+
+    <string name="pref_enable_notifications_true">Enabled</string>
+    <string name="pref_enable_notifications_false">Not Enabled</string>
+    <string name="pref_enable_notifications_default" translatable="false">true</string>
+
     <!-- Strings for formatting weather-related data -->
 
     <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
@@ -53,10 +61,6 @@
     <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
     <string name="pref_units_imperial" translatable="false">imperial</string>
 
-    <!-- Notification Format -->
-    <string name="format_notification">
-        Forecast for today: %1$s with a high of %2$s and low of %3$s.
-    </string>
 
     <!-- Language-specific constants -->
     <string name="today">Today</string>
@@ -94,7 +98,17 @@
         Weather for <xliff:g id="date">%1$s</xliff:g> in <xliff:g id="location">%2$s</xliff:g>:
         A high of <xliff:g id="high">%3$s</xliff:g> and low of
         <xliff:g id="low">%4$s</xliff:g></string>
+
     <!-- SyncAdapter related -->
-    <string name="sync_account_type">example.com</string>
-    <string name="sync_authority">"com.example.android.sunshine.app"</string>
+    <string name="sync_account_type">sunshine.example.com</string>
+    <string name="content_authority">com.example.christina.sunshine</string>
+
+    <!-- Notification Format -->
+    <string name="format_notification">
+        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
+    </string>
+
+    <!-- Strings related to Notification preference -->
+    <string name="pref_last_notification">last_notification</string>
+
 </resources>
